feat: pagination -> on progress

--- a/frontend/src/app/core/layout/dashboard/dashboard.component.html
+++ b/frontend/src/app/core/layout/dashboard/dashboard.component.html
@@ -1,147 +1,156 @@
 <div class="container is-fluid">
-    <div class="header">
-        <section class="section">
-            <h1 class="title">Section</h1>
-            <h2 class="subtitle">
-              A simple container to divide your page into <strong>sections</strong>, like
-              the one you're currently reading.
-            </h2>
-        </section>
+  <div class="header">
+    <section class="section">
+      <h1 class="title">Section</h1>
+      <h2 class="subtitle">
+        A simple container to divide your page into <strong>sections</strong>,
+        like the one you're currently reading.
+      </h2>
+    </section>
+  </div>
+  <div class="columns">
+    <div class="column is-2">
+      <aside class="menu">
+        <p class="menu-label">Navigation</p>
+        <ul class="menu-list">
+          <li><a>Dashboard</a></li>
+          <li><a>Stocks</a></li>
+          <li><a>Settings</a></li>
+        </ul>
+      </aside>
     </div>
-    <div class="columns">
-        <div class="column is-2">
-            <aside class="menu">
-                <p class="menu-label">
-                  Navigation
-                </p>
-            <ul class="menu-list">
-                <li><a>Dashboard</a></li>
-                <li><a>Stocks</a></li>
-                <li><a>Settings</a></li>
-              </ul>
-            </aside>
+    <div class="column is-10">
+      <nav class="level">
+        <div class="level-item has-text-centered">
+          <div>
+            <p class="heading">Total Stocks</p>
+            <p class="title">{{ total }}</p>
+          </div>
         </div>
-        <div class="column is-10">
-            <nav class="level">
-                <div class="level-item has-text-centered">
-                  <div>
-                    <p class="heading">Total Stocks</p>
-                    <p class="title">932</p>
-                  </div>
-                </div>
-                <div class="level-item has-text-centered">
-                  <div>
-                    <p class="heading">Stocks</p>
-                    <p class="title">123</p>
-                  </div>
-                </div>
-                <div class="level-item has-text-centered">
-                  <div>
-                    <p class="heading">Sector</p>
-                    <p class="title">Energy</p>
-                  </div>
-                </div>
-                <div class="level-item has-text-centered">
-                  <div>
-                    <p class="heading">Listing Board</p>
-                    <p class="title">Utama</p>
-                  </div>
-                </div>
-              </nav>
-            <section class="section">
-                <h1 class="title">Section</h1>
-                <h2 class="subtitle">
-                  A simple container to divide your page into <strong>sections</strong>, like
-                  the one you're currently reading.
-                </h2>
-            </section>
-            <div class="fixed-grid has-3-cols">
-                <div class="grid">
-                    <div class="card">
-                        <div class="card-content">
-                          <p class="title">
-                            Placeholder for stock info
-                          </p>
-                          <p class="subtitle">BBCA.JK</p>
-                        </div>
-                        <footer class="card-footer">
-                          <p class="card-footer-item">
-                            <span>
-                              To Be Own
-                              <a href="https://twitter.com/codinghorror/status/506010907021828096"
-                                >Add</a
-                              >
-                            </span>
-                          </p>
-                          <p class="card-footer-item">
-                            <span> Owned <a href="#">Delete</a> </span>
-                          </p>
-                        </footer>
-                      </div>
-                      <div class="card">
-                        <div class="card-content">
-                          <p class="title">
-                            Placeholder for stock info
-                          </p>
-                          <p class="subtitle">BBCA.JK</p>
-                        </div>
-                        <footer class="card-footer">
-                          <p class="card-footer-item">
-                            <span>
-                              To Be Own
-                              <a href="https://twitter.com/codinghorror/status/506010907021828096"
-                                >Add</a
-                              >
-                            </span>
-                          </p>
-                          <p class="card-footer-item">
-                            <span> Owned <a href="#">Delete</a> </span>
-                          </p>
-                        </footer>
-                      </div>
-                                        <div class="cell">cell 3</div>
-                    <div class="cell">cell 4</div>
-                    <div class="cell">cell 5</div>
-                    <div class="cell">cell 6</div>
-                </div>
+        <div class="level-item has-text-centered">
+          <div>
+            <p class="heading">Chosen Stocks</p>
+            <p class="title">{{ chosenItems }}</p>
+          </div>
+        </div>
+        <div class="level-item has-text-centered">
+          <div>
+            <p class="heading">Sector</p>
+            <p class="title" *ngIf="!isFilteredBySector">Placeholder</p>
+            <p class="title" *ngIf="isFilteredBySector">All</p>
+          </div>
+        </div>
+        <div class="level-item has-text-centered">
+          <div>
+            <p class="heading" >Listing Board</p>
+            <p class="title" *ngIf="!isFilteredByIndustry">Placeholder</p> 
+            <p class="title" *ngIf="isFilteredByIndustry">All</p>
+          </div>
+        </div>
+      </nav>
+      <section class="section">
+        <h1 class="title">Section</h1>
+        <h2 class="subtitle">
+          A simple container to divide your page into <strong>sections</strong>,
+          like the one you're currently reading.
+        </h2>
+      </section>
+
+      <div class="columns is-multiline">
+        <div
+          class="column is-three-quarters-mobile is-two-thirds-tablet is-half-desktop is-one-third-widescreen is-one-quarter-fullhd"
+          *ngFor="let item of data"
+        >
+          @if (!isLoading) {
+          <div class="card">
+            <div class="card-content">
+              <h1 class="title is-4">{{ item.symbol }}</h1>
+              <h2 class="subtitle">{{ item.company_name }}</h2>
+              <p class="is-size-6">Listing Board: {{ item.listing_board }}</p>
+              <p class="is-size-6">Price: {{ item.currentPrice }}</p>
+              <p class="is-size-6">Sector : {{ item.sector }}</p>
+              <p class="is-size-6">Industry : {{ item.industry }}</p>
+              <p class="is-size-6">
+                Recommendation : {{ item.recommendationKey }}
+              </p>
+              <p class="is-size-6">Listing date: {{ item.listing_date }}</p>
             </div>
-            <section class="section">
-                <nav class="pagination is-centered" role="navigation" aria-label="pagination">
-                    <a href="#" class="pagination-previous">Previous</a>
-                    <a href="#" class="pagination-next">Next page</a>
-                    <ul class="pagination-list">
-                      <li><a href="#" class="pagination-link" aria-label="Goto page 1">1</a></li>
-                      <li><span class="pagination-ellipsis">&hellip;</span></li>
-                      <li><a href="#" class="pagination-link" aria-label="Goto page 45">45</a></li>
-                      <li>
-                        <a
-                          class="pagination-link is-current"
-                          aria-label="Page 46"
-                          aria-current="page"
-                          >46</a
-                        >
-                      </li>
-                      <li><a href="#" class="pagination-link" aria-label="Goto page 47">47</a></li>
-                      <li><span class="pagination-ellipsis">&hellip;</span></li>
-                      <li><a href="#" class="pagination-link" aria-label="Goto page 86">86</a></li>
-                    </ul>
-                  </nav>
-            </section>
-            
-        </div>
-        
-    <!-- </div>
-    <div class="main-container"> -->
-        <!-- <div class="side-nav"></div> -->
-         <!-- <app-side-nav></app-side-nav> -->
-        <!-- <div class="main"> -->
-            <!-- <ul>
-                <li *ngFor="let item of data.data">{{ item | json}}</li>
-            </ul> -->
-            <!-- <pre>{{data.data | json}}</pre>
-        </div>
-    </div> -->
+            <footer class="card-footer" *ngIf="isLogin">
+              <div class="card-footer-item control">
+                <div class="columns is-vcentered is-multiline is-gapless">
+                  <div class="column is-half is-vcentered">
+                    <input
+                      class="input num-input is-small"
+                      type="number"
+                      placeholder="Lot"
+                    />
+                  </div>
+                  <div class="column is-half">
+                    <input
+                      title="num-readonly"
+                      class="input num-readonly is-small"
+                      type="text"
+                      value="Total Price"
+                      readonly
+                    />
+                  </div>
+                  <div class="column is-full">
+                    <button
+                      class="button is-success is-active is-small is-fullwidth"
+                      href="https://twitter.com/codinghorror/status/506010907021828096"
+                    >
+                      Add
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <div class="card-footer-item control">
+                <div class="columns is-vcentered is-multiline is-gapless">
+                  <div class="column is-half is-vcentered">
+                    <input
+                      class="input num-input is-small"
+                      type="number"
+                      placeholder="Lot"
+                      min="0"
+                    />
+                  </div>
+                  <div class="column is-half">
+                    <input
+                      title="num-readonly"
+                      class="input num-readonly is-small"
+                      type="text"
+                      value="Total Price"
+                      readonly
+                    />
+                  </div>
+                  <div class="column is-full">
+                    <button
+                      class="button is-danger is-active is-small is-fullwidth"
+                      href="https://twitter.com/codinghorror/status/506010907021828096"
+                    >
+                      Remove
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </footer>
+          </div>
 
+          } @else {
+          <div class="card skeleton-lines">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          }
+        </div>
+      </div>
+      
+      <section class="section">
+        <app-pagination></app-pagination>
+      </section>
+    </div>
+  </div>
 </div>
-
-
