--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -68,4 +68,11 @@ $container-max-width: iv.$fullhd !default;
     $card-header-padding: 5rem 5rem;
 }
 
+.num-input{
+    width: flex;
+}
+
+.num-readonly{
+    width: flex;
+}
 
