--- a/frontend/src/app/core/layout/pagination/pagination.component.html
+++ b/frontend/src/app/core/layout/pagination/pagination.component.html
@@ -1,47 +1,47 @@
-<nav
-          class="pagination is-centered"
-          role="navigation"
-          aria-label="pagination"
-        >
-          <a href="#" class="pagination-previous">Previous</a>
-          <a href="#" class="pagination-next">Next page</a>
-          <ul class="pagination-list">
-            <li>
-              <a href="#" class="pagination-link" aria-label="Goto page 1">1</a>
-            </li>
-            <li><span class="pagination-ellipsis">&hellip;</span></li>
-            <li>
-              <a href="#" class="pagination-link" aria-label="Goto page 45"
-                >45</a
-              >
-            </li>
-            <li>
-              <a
-                class="pagination-link is-current"
-                aria-label="Page 46"
-                aria-current="page"
-                >46</a
-              >
-            </li>
-            <li>
-              <a href="#" class="pagination-link" aria-label="Goto page 47"
-                >47</a
-              >
-            </li>
-            <li><span class="pagination-ellipsis">&hellip;</span></li>
-            <li>
-              <a href="#" class="pagination-link" aria-label="Goto page 86"
-                >86</a
-              >
-            </li>
-          </ul>
-          <div class="select">
-            <select title="per-page">
-              <option>12</option>
-              <option>24</option>
-              <option>48</option>
-              <option>120</option>
-              <option>All</option>
-            </select>
-          </div>
-        </nav>
+<nav class="pagination is-centered" role="navigation" aria-label="pagination">
+  <a href="#" class="pagination-previous">Previous</a>
+  <a href="#" class="pagination-next">Next page</a>
+  <ul class="pagination-list">
+    <li [hidden]="currentPage <= 2" >
+      <a href="#" class="pagination-link" (click)="changePage(1)" aria-label="Goto page 1">1</a>
+    </li>
+    <li [hidden]="currentPage <= 3">
+      <span class="pagination-ellipsis">&hellip;</span>
+    </li>
+
+    <li *ngFor="let page of pagesToShow">
+      <a
+        href="#"
+        [ngClass]="{
+          'is-current': page === currentPage,
+          'pagination-link': true
+        }"
+        aria-label="Goto page 45"
+        >{{ page }}</a
+      >
+    </li>
+    <li
+      [hidden]="!(currentPage < totalPage - 1) || currentPage == totalPage - 2"
+    >
+      <span class="pagination-ellipsis">&hellip;</span>
+    </li>
+    <li [hidden]="!(currentPage < totalPage - 1)">
+      <a
+        (click)="changePage(totalPage)"
+        class="pagination-link"
+        aria-label="Last Page"
+        >{{ totalPage }}</a
+      >
+    </li>
+  </ul>
+
+  <div class="select">
+    <select title="per-page">
+      <option>12</option>
+      <option>24</option>
+      <option>48</option>
+      <option>120</option>
+      <option>All</option>
+    </select>
+  </div>
+</nav>
