--- a/frontend/src/app/core/layout/homepage/homepage.component.scss
+++ b/frontend/src/app/core/layout/homepage/homepage.component.scss
@@ -8,6 +8,8 @@
 
 .cupid{
   justify-content: center;
+  align-items: center;
+//   display: flex;
   margin-top: 20px;
   width: 30%; 
   height: 30%;
