feat: theme -> done but not perfect

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,7 @@
 <router-outlet />
+<div class='toggle-switch' (click)="themeToggleMode()" [(ngModel)]="isLight" ngDefaultControl >
+    <label>
+        <input placeholder="theme" type = 'checkbox' >
+        <span class = 'slider'></span>
+    </label>
+</div>
