--- a/frontend/src/app/core/layout/dashboard/dashboard.component.html
+++ b/frontend/src/app/core/layout/dashboard/dashboard.component.html
@@ -1,10 +1,10 @@
 <div class="container is-fluid">
   <div class="header">
     <section class="section">
-      <h1 class="title">Section</h1>
+      <h1 class="title">Dashboard</h1>
       <h2 class="subtitle">
-        A simple containe to divide your page into <strong>sections</strong>,
-        like the one you're currently reading.
+        <!-- A simple containe to divide your page into <strong>sections</strong>,
+        like the one you're currently reading. -->
       </h2>
     </section>
   </div>
