--- a/frontend/src/app/core/layout/homepage/homepage.component.html
+++ b/frontend/src/app/core/layout/homepage/homepage.component.html
@@ -32,11 +32,11 @@
       <div class="container">
         <ul>
           <li class="is-active"><a>Overview</a></li>
-          <li><a>N</a></li>
-          <li><a>Grid</a></li>
-          <li><a>Elements</a></li>
-          <li><a>Components</a></li>
-          <li><a>Layout</a></li>
+          <li><a>News</a></li>
+          <li><a>Stocks</a></li>
+          <li><a>Financials</a></li>
+          <!-- <li><a>Components</a></li> -->
+          <!-- <li><a>Layout</a></li> -->
         </ul>
       </div>
     </nav>
