--- a/frontend/src/app/core/layout/navbar/navbar.component.html
+++ b/frontend/src/app/core/layout/navbar/navbar.component.html
@@ -81,7 +81,7 @@
     <div class="navbar-start">
       <a class="navbar-item"> Home </a>
 
-      <a class="navbar-item"> Documentation </a>
+      <a class="navbar-item"> About Us </a>
 
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link"> More </a>
@@ -110,6 +110,7 @@
       </div>
     </div>
   </div>
+  
 
   
 </nav>
