fix: parsing issues from backend

--- a/frontend/src/app/core/layout/side-nav/side-nav.component.html
+++ b/frontend/src/app/core/layout/side-nav/side-nav.component.html
@@ -13,7 +13,7 @@
       <label class="menu-label radio">Sector</label>
       <div class="radio-group fixed-grid has-1-cols">
         <ul class="radio is-size-7">
-          <li class="field" *ngFor="let item of sector">
+          <li class="" *ngFor="let item of sector">
             <input title="radio" type="radio" name="answer" />
             {{ item }}
           </li>
@@ -27,7 +27,7 @@
       <label class="menu-label radio">Industry</label>
       <div class="radio-group fixed-grid has-1-cols">
         <ul class="radio is-size-7">
-          <li class="field" *ngFor="let item of industry">
+          <li class="" *ngFor="let item of industry">
             <input title="radio" type="radio" name="answer" />
             {{ item }}
           </li>
