--- a/frontend/src/app/core/layout/dashboard/dashboard.component.html
+++ b/frontend/src/app/core/layout/dashboard/dashboard.component.html
@@ -9,10 +9,10 @@
     </section>
   </div>
   <div class="columns ">
-    <div class="column is-2">
+    <div class="column is-one-fifth">
       <app-side-nav  [industry]="industry" [sector]="sector"></app-side-nav> 
     </div>
-    <div class="column is-10">
+    <div class="column">
       <nav class="level">
         <div class="level-item has-text-centered">
           <div>
@@ -45,90 +45,94 @@
         <app-filter-container [listingBoard]="listingBoard"></app-filter-container>
 
       
-      <div class="columns is-multiline">
+      <!-- <div class="columns is-multiline ">
         
         <div
-          class="column is-three-quarters-mobile is-two-thirds-tablet is-half-desktop is-one-third-widescreen is-one-quarter-fullhd"
-          *ngFor="let item of data"
-        >
-      
+          class="column  is-three-quarters-mobile is-two-thirds-tablet is-half-desktop is-one-third-widescreen is-one-quarter-fullhd"
+          *ngFor="let item of limitedData;"
+        > -->
+        <div class="fixed-grid has-auto-count">
+          <div class="grid has-5-cols">
+            @for (item of data; track $index) {
+              <div class="card">
+                <div class="card-content">
+                  <h2 class="title is-7">{{ item.symbol }}</h2>
+                  <h3 class="subtitle is-7">{{ item.company_name }}</h3>
+                  <p class="is-size-7">Listing Board: {{ item.listing_board }}</p>
+                  <p class="is-size-7">Price: {{ item.currentPrice }}</p>
+                  <p class="is-size-7">Sector : {{ item.sector }}</p>
+                  <p class="is-size-7">Industry : {{ item.industry }}</p>
+                  <p class="is-size-7">
+                    Recommendation : {{ item.recommendationKey }}
+                  </p>
+                  <p class="is-size-7">Listing date: {{ item.listing_date }}</p>
+                </div>
+                <footer class="card-footer" *ngIf="isLogin">
+                  <div class="card-footer-item control">
+                    <div class="columns is-vcentered is-multiline is-gapless">
+                      <div class="column is-half is-vcentered">
+                        <input
+                          class="input num-input is-small"
+                          type="number"
+                          placeholder="Lot"
+                        />
+                      </div>
+                      <div class="column is-half">
+                        <input
+                          title="num-readonly"
+                          class="input num-readonly is-small"
+                          type="text"
+                          value="Total Price"
+                          readonly
+                        />
+                      </div>
+                      <div class="column is-full">
+                        <button
+                          class="button is-success is-active is-small is-fullwidth"
+                          href="https://twitter.com/codinghorror/status/506010907021828096"
+                        >
+                          Add
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card-footer-item control">
+                    <div class="columns is-vcentered is-multiline is-gapless">
+                      <div class="column is-half is-vcentered">
+                        <input
+                          class="input num-input is-small"
+                          type="number"
+                          placeholder="Lot"
+                          min="0"
+                        />
+                      </div>
+                      <div class="column is-half">
+                        <input
+                          title="num-readonly"
+                          class="input num-readonly is-small"
+                          type="text"
+                          value="Total Price"
+                          readonly
+                        />
+                      </div>
+                      <div class="column is-full">
+                        <button
+                          class="button is-danger is-active is-small is-fullwidth"
+                          href="https://twitter.com/codinghorror/status/506010907021828096"
+                        >
+                          Remove
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </footer>
+              </div>
+            }
         <!-- <div *ngIf="isLoading" class="card">
           <div class="card-content skeleton-block"></div>
         </div> -->
         
-          <div class="card">
-            <div class="card-content">
-              <h1 class="title is-4">{{ item.symbol }}</h1>
-              <h2 class="subtitle">{{ item.company_name }}</h2>
-              <p class="is-size-6">Listing Board: {{ item.listing_board }}</p>
-              <p class="is-size-6">Price: {{ item.currentPrice }}</p>
-              <p class="is-size-6">Sector : {{ item.sector }}</p>
-              <p class="is-size-6">Industry : {{ item.industry }}</p>
-              <p class="is-size-6">
-                Recommendation : {{ item.recommendationKey }}
-              </p>
-              <p class="is-size-6">Listing date: {{ item.listing_date }}</p>
-            </div>
-            <footer class="card-footer" *ngIf="isLogin">
-              <div class="card-footer-item control">
-                <div class="columns is-vcentered is-multiline is-gapless">
-                  <div class="column is-half is-vcentered">
-                    <input
-                      class="input num-input is-small"
-                      type="number"
-                      placeholder="Lot"
-                    />
-                  </div>
-                  <div class="column is-half">
-                    <input
-                      title="num-readonly"
-                      class="input num-readonly is-small"
-                      type="text"
-                      value="Total Price"
-                      readonly
-                    />
-                  </div>
-                  <div class="column is-full">
-                    <button
-                      class="button is-success is-active is-small is-fullwidth"
-                      href="https://twitter.com/codinghorror/status/506010907021828096"
-                    >
-                      Add
-                    </button>
-                  </div>
-                </div>
-              </div>
-              <div class="card-footer-item control">
-                <div class="columns is-vcentered is-multiline is-gapless">
-                  <div class="column is-half is-vcentered">
-                    <input
-                      class="input num-input is-small"
-                      type="number"
-                      placeholder="Lot"
-                      min="0"
-                    />
-                  </div>
-                  <div class="column is-half">
-                    <input
-                      title="num-readonly"
-                      class="input num-readonly is-small"
-                      type="text"
-                      value="Total Price"
-                      readonly
-                    />
-                  </div>
-                  <div class="column is-full">
-                    <button
-                      class="button is-danger is-active is-small is-fullwidth"
-                      href="https://twitter.com/codinghorror/status/506010907021828096"
-                    >
-                      Remove
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </footer>
-          </div>
+          
 
           
         </div>
