--- a/frontend/src/app/core/layout/pagination/pagination.component.html
+++ b/frontend/src/app/core/layout/pagination/pagination.component.html
@@ -13,7 +13,7 @@
       <span class="pagination-ellipsis">&hellip;</span>
     </li>
 
-    <li *ngFor="let page of pagesToShow">
+    <li *ngFor="let page of pagesToShow; trackby: trackByPage">
       <a
         href="#"
         [ngClass]="{
@@ -42,10 +42,12 @@
 
   <div class="select">
     <select title="per-page" (change)="changeLimit($event)">
-      <option value="12">12</option>
-      <option value="24">24</option>
-      <option value="72">72</option>
-      <option value="120">120</option>
+      <option value="20">20</option>
+      <option value="40">40</option>
+      <option value="80">80</option>
+      <option value="160">160</option>
+      <option value="320">320</option>
+      <option value="640">640</option>
       <option value="{{total}}">All</option>
     </select>
   </div>
