--- a/frontend/src/app/core/layout/navbar/navbar.component.html
+++ b/frontend/src/app/core/layout/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<nav class="navbar has-shadow" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a title="navbar-item" class="navbar-item" href="https://bulma.io">
       <svg
@@ -76,7 +76,7 @@
       </span>
     </p>
   </div>
-  
+
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
       <a class="navbar-item"> Home </a>
@@ -96,9 +96,6 @@
       </div>
     </div>
 
-      
-    
-
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
@@ -110,7 +107,4 @@
       </div>
     </div>
   </div>
-  
-
-  
 </nav>
