--- a/frontend/src/app/core/layout/side-nav/side-nav.component.scss
+++ b/frontend/src/app/core/layout/side-nav/side-nav.component.scss
@@ -32,3 +32,39 @@
     margin-bottom: 1rem;
 }
 
+.input{
+    // border-color: var(--monkey-primary-01);
+    width: 60%;
+    height: 70%;
+    
+}
+
+.count-filter{
+  margin-bottom: 20px;
+  
+}
+
+.input-group{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  // flex-wrap: wrap;
+}
+
+.input-group .num-input {
+  flex: 1; /* Make input fields take equal space */
+}
+
+.input-group .num-input:first-child {
+  margin-right: 5px; /* Add some space between the inputs */
+}
+
+.input-group .num-input:last-child {
+  margin-left: 5px; /* Add some space between the inputs */
+}
+
+.apply-button{
+  margin-top: 5px;
+}
+
